tests/invalid/Function_Invalid_1.whiley
import * from whiley.lang.*

function f(int x) -> void:
    asdkljkljg(x)

method main(System.Console sys) -> void:
    f(1)
